tests/NormalTests/paczka1/fuzzy1/87192851.err
Error in line 18: UgA6U8x S684 41,0
Error in line 1: uKB1NdDU5uY S331 9,4
Error in line 29: GZEPsZbB S331 89,7
Error in line 30: uKB1NdDU5uY S115 59,9
Error in line 37: S331 S684 56,4
